--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-table": "^7.8.0",
+    "styled-components": "^5.3.9",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
